# tonic-demo

./: Cargo.toml  Justfile  README.md  flake.nix
client/: Cargo.toml  Dockerfile  build.rs
client/src/: main.rs
proto/: nice.proto
server/: Cargo.toml  Dockerfile  build.rs
server/.cargo/: config.toml
server/src/: greeter.rs  main.rs  route_guide.rs  route_guide_db.rs  tests.rs
