[workspace]
resolver = "3"
members = ["client", "server"]

[workspace.package]
version = "0.1.0-alpha"
readme = "README.md"
authors = ["Yusong Lai <yusong.lai@icloud.com>"]
repository = "https://github.com/whisperpine/tonic-demo"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

[workspace.dependencies]
tonic-build = "0.13.0"
anyhow = "1.0.97"
prost = "0.13.5"
tonic = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"

# rustc lints (https://doc.rust-lang.org/rustc/lints/index.html)
[workspace.lints.rust]
# lint groups (https://doc.rust-lang.org/rustc/lints/groups.html)
rust-2024-compatibility = { level = "warn", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
deprecated-safe = { level = "deny", priority = -1 }
# lint listing (https://doc.rust-lang.org/rustc/lints/listing/index.html)
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"

# rustdoc lints (https://doc.rust-lang.org/rustdoc/lints.html)
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "deny"

# clippy lints (https://rust-lang.github.io/rust-clippy/master/index.html)
[workspace.lints.clippy]
inefficient_to_string = "warn"
rest_pat_in_fully_bound_structs = "warn"
match_wildcard_for_single_variants = "warn"
fn_params_excessive_bools = "warn"
unnested_or_patterns = "warn"
verbose_file_reads = "warn"
uninlined_format_args = "warn"
needless_continue = "warn"
# allow_attributes = "warn"
lossy_float_literal = "warn"
option_option = "warn"
macro_use_imports = "warn"
disallowed_types = "deny"
str_to_string = "warn"
match_on_vec_items = "warn"
suboptimal_flops = "warn"
enum_glob_use = "warn"
filter_map_next = "warn"
imprecise_flops = "warn"
unused_self = "warn"
empty_enum = "warn"
linkedlist = "warn"
mem_forget = "warn"
exit = "warn"
