[package]
name = "tonic_demo_client"
edition.workspace = true
authors.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tonic_demo_client"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies]
anyhow = "1.0.79"
prost = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
