[package]
name = "tclient"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "tclient"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rand = "0.9.0"

[lints]
workspace = true
