[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["full"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8.4"
