[package]
name = "tonic_demo_server"
edition.workspace = true
authors.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tonic_demo_server"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
prost = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
