[package]
name = "tserver"
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "tserver"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
